# swing-agent

./: .env.example  AGENTS.md  CLAUDE.md  DEPLOYMENT_UBUNTU.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  ROUTINES.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: validate.md  weekly.md
.codex/: config.toml
docs/: README.md  deployment.md  framework-migration-plan.md  implementation-plan.md  service-reference.md
src/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  logging_config.py  redis_lock.py  requirements.txt  settings.py
src/dashboard/: .gitignore  Dockerfile
src/dashboard/api/: app.py  server.py
src/dashboard/web/: index.html  package-lock.json  package.json  vite.config.ts
src/database/: init.sql
src/db/: models.py
src/db/migrations/: env.py  script.py.mako
src/engine/: commands.py
src/engine/scripts/: backfill_twelvedata.py  backtest_e0_variants.py  backtest_entry_confirm.py  backtest_entry_sim.py  backtest_signals.py  calibration.py  check_cb_calendar.py  check_econ_calendar.py  check_intervention_watch.py  check_news.py  check_structured_news_event.py  (+18 more)
src/mcp-server/: server.py  server_mcp.py  tools.py
src/pipeline/: celery_app.py  celery_tasks.py  scheduler.py  tasks.py
src/scripts/: apply_postgres_migrations.py  backfill_sqlite_to_postgres.py  backup_postgres.sh  diff_sqlite_postgres.py  mcp_parity_check.py  reconcile_db_git.py  send_notifications.py
wiki/system/: constitution.md  currency_exposure.md  yield_environment.md
wiki/templates/: daily_validation.md  weekly_forecast.md
(+318 files in other folders)
