[project]
name = "swing-agent"
version = "0.1.0"
description = "Multi-instrument swing-trading pipeline: deterministic engine + MCP + dashboard"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "yfinance",
    "python-dotenv",
    "psycopg[binary]",
    "apscheduler",
    "mcp>=1.2",
    "uvicorn",
    "pydantic-settings>=2.4",
    "celery>=5.4",
    "redis>=5.0",
    "fastapi>=0.115",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["engine", "pipeline", "mcp_server", "dashboard", "dashboard.api"]
